--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.4",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mdbreact": "^4.25.3",
     "mongoose": "^5.3.6",
     "mongoose-unique-validator": "^2.0.3",
