--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "debounce": "^1.2.0",
     "formik": "^2.1.4",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "pikaday": "^1.8.0",
     "react": "^16.12.0",
